<resources>
    <string name="app_name">EpicRepertory</string>
    <string name="login_image">Login Image</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="login_page">Login Page</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_register_yet">Not register yet?</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up_image">Sign Up Image</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_agree_with_terms_and_privacy">I agree with</string>
    <string name="terms_and_privacy">Terms and Privacy</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home fragment</string>
    <string name="chartfragment">ChartFragment</string>
    <string name="listfragment">Listfragment</string>
    <string name="settingsfragment">settingsfragment</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="chart">Chart</string>
    <string name="settings">Settings</string>
    <string name="search_music">Search Music</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="detail_image">detail_image</string>
    <string name="lyrics">Lyrics</string>
    <string name="search">Search</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="add_your_music_line_by_line">Add Your Music Line by Line</string>
    <string name="line_1">Line 1</string>
    <string name="enter_your_lyrics">Enter your lyrics…</string>
    <string name="rhythm">Rhythm…</string>
    <string name="enter_your_chord">Enter your chord…</string>
    <string name="select_your_tone">Select Your Tone</string>
    <string name="c_sharp">C#</string>
    <string name="d_sharp">D#</string>
    <string name="db">Db</string>
    <string name="eb">Eb</string>
    <string name="f_sharp">F#</string>
    <string name="gb">Gb</string>
    <string name="g_sharp">G#</string>
    <string name="ab">Ab</string>
    <string name="a_sharp">A#</string>
    <string name="bb">Bb</string>
    <string name="next_page">Next page</string>
    <string name="add_music">Add MUSIC</string>
    <string name="tones">Tones</string>
    <string name="back_page">Back Page</string>
    <string name="your_title">Enter Your Title…</string>
    <string name="enter_artist_name">Enter Artist Name…</string>
    <string name="write_a_comment">Write a comment…</string>
    <string name="comment_section">Comment Section</string>
    <string name="date">Date</string>
    <string name="epic_repertory">Epic Repertory\'s\nInformation</string>
    <string name="total_musics">Total Musics:</string>
    <string name="_100">100</string>
    <string name="total_comments">Total Comments:</string>
    <string name="total_users">Total Users:</string>
    <string name="watch_on_youtube">Watch on YouTube</string>
    <string name="youtube">youtube</string>
    <string name="enter_your_youtube_link">Enter your YouTube link…</string>
    <string name="play">Play</string>
    <string name="youtube_api_key">AIzaSyBvgG5kOPcUkxjgAppxttrw7go522268W4</string>
    <string name="your_library">Your Library</string>
    <string name="add_to_your_library">Add to your library</string>
    <string name="chords">Chords</string>
    <string name="rhythms">Rhythms</string>
    <string name="save">Save</string>
    <string name="enter_your_new_title">Enter Your New Title</string>
    <string name="trash">trash</string>
    <string name="welcome">Welcome,</string>
    <string name="update_your_name">Update your name</string>
    <string name="change_your_name">Change your name</string>
    <string name="change_your_email">Change your email</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="change_your_username">Change your username</string>
    <string name="setting_email">Email:</string>

    <string-array name="tones">
        <item>C</item>
        <item>C#</item>
        <item>D</item>
        <item>D#</item>
        <item>E</item>
        <item>F</item>
        <item>F#</item>
        <item>G</item>
        <item>G#</item>
        <item>A</item>
        <item>A#</item>
        <item>B</item>
    </string-array>
</resources>