<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/login_image"
            android:scaleType="fitCenter"
            android:src="@drawable/sign_in_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/athiti_bold"
            android:minHeight="32dp"
            android:text="@string/login_page"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="#0B4654"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_logo" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/athiti_bold"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_text"
            tools:ignore="RtlSymmetry">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_style"
            android:fontFamily="@font/athiti_bold"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:hint="@string/password"
            android:paddingStart="8dp"
            app:passwordToggleEnabled="true"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_et_email"
            tools:ignore="RtlSymmetry">


        </com.google.android.material.textfield.TextInputEditText>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rect_rounded_button"
            android:clickable="true"
            android:fontFamily="@font/baloo_thambi"
            android:minHeight="48dp"
            android:text="@string/login"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_et_password" />

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/sign_in_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:fontFamily="@font/athiti_bold"
            android:text="@string/forgot_password"
            android:textColor="#0B4654"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_forgot_password">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_not_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:fontFamily="@font/athiti_bold"
                android:text="@string/not_register_yet"
                android:textAlignment="center"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/sign_in_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:fontFamily="@font/athiti_bold"
                android:onClick="goToSignUpPage"
                android:text="@string/create_an_account"
                android:textAlignment="center"
                android:textColor="#0B4654"
                android:textSize="16sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>