<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddMusicsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/add_music_icon"
            android:contentDescription="@string/search_music"
            android:elevation="20dp"
            android:outlineSpotShadowColor="@color/orange_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/add_music_info_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:layout_marginTop="24dp"
            app:strokeColor="@color/grey"
            app:strokeWidth="2dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <androidx.appcompat.widget.AppCompatCheckedTextView
                    android:id="@+id/add_music_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/athiti_bold"
                    android:text="@string/add_your_music_line_by_line"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_music_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_thambi"
                    android:hint="@string/your_title"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_music_header" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_music_artist_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_thambi"
                    android:hint="@string/enter_artist_name"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_music_title_edit_text" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_music_tone_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:hintAnimationEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/tones"
                    android:text="@string/select_your_tone"
                    app:layout_constraintTop_toBottomOf="@id/add_music_artist_edit_text">

                    <AutoCompleteTextView
                        android:id="@+id/add_music_tones_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:dropDownHeight="250dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/baloo_thambi"
                        android:inputType="none"
                        android:text="@string/c"
                        android:textColor="#757575"
                        android:textSize="16sp"
                        tools:ignore="LabelFor" />


                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/add_music_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/grey"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_music_info_card_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_music_user_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_music_artist_edit_text">

                <androidx.appcompat.widget.AppCompatCheckedTextView
                    android:id="@+id/add_music_line_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/athiti_bold"
                    android:text="@string/line_1"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_music_lyrics_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/athiti_bold"
                    android:hint="@string/enter_your_lyrics"
                    android:minHeight="48dp"
                    android:textColorHint="#78909C"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_music_line_tv" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_music_chord_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/athiti_bold"
                    android:hint="@string/enter_your_chord"
                    android:minHeight="48dp"
                    android:textColorHint="#78909C"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_music_lyrics_et" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_music_rhythm_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/athiti_bold"
                    android:hint="@string/rhythm"
                    android:minHeight="48dp"
                    android:textColorHint="#78909C"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_music_chord_et" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_music_btn_back_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/dark_blue"
                    android:text="@string/back_page"
                    android:textColor="@color/white"
                    app:cornerRadius="15dp"
                    app:layout_constraintEnd_toStartOf="@id/add_music_btn_next_page"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_music_rhythm_et" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_music_btn_next_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/dark_blue"
                    android:text="@string/next_page"
                    android:textColor="@color/white"
                    app:cornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/add_music_btn_back_page"
                    app:layout_constraintTop_toBottomOf="@id/add_music_rhythm_et" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/add_music_youtube_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:strokeColor="@color/grey"
            app:strokeWidth="2dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_music_card_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_music_youtube_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/athiti_semibold"
                android:hint="@string/enter_your_youtube_link" />

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_music_btn_add_db_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_music_youtube_card_view">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_music_btn_add_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/add_music"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>